Update git repo in package.json

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "src"
   ],
   "repository": {
-    "url": "https://github.com/k15a/ayu",
+    "url": "https://github.com/ayu-theme/ayu-colors",
     "type": "git"
   },
   "author": "Konstantin Pschera <me@kons.ch>",
