--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "jsnext:main": "src/colors.js",
   "module": "src/colors.js",
   "scripts": {
-    "clear-before": "rimraf ayu src/dark.js src/light.js src/mirage.js",
-    "clear-after": "rimraf ayu",
-    "update": "babel-node scripts/update.js",
-    "test": "jest",
-    "start": "run-s clear-before update clear-after test",
-    "clear-build": "rimraf dist",
-    "build-cjs": "babel src --out-dir dist",
     "build": "run-s clear-build build-cjs",
-    "prepublish": "npm run build"
+    "build-cjs": "babel src --out-dir dist",
+    "build-svg": "babel-node scripts/build-svg.js",
+    "clear-after": "rimraf ayu",
+    "clear-before": "rimraf ayu src/dark.js src/light.js src/mirage.js",
+    "clear-build": "rimraf dist",
+    "prepublish": "run-s build build-svg",
+    "start": "run-s clear-before update clear-after test build-svg",
+    "test": "jest",
+    "update": "babel-node scripts/update.js"
   },
   "files": [
     "dist",
@@ -33,6 +34,7 @@
     "babel-preset-latest": "6.16.0",
     "babel-preset-stage-0": "6.16.0",
     "cross-env": "3.1.3",
+    "font-color-contrast": "1.0.3",
     "is-object": "1.0.1",
     "jest": "16.0.2",
     "js-yaml": "3.6.1",
