--- a/package.json
+++ b/package.json
@@ -30,15 +30,15 @@
   "devDependencies": {
     "babel-cli": "6.18.0",
     "babel-core": "6.18.2",
-    "babel-jest": "16.0.0",
+    "babel-jest": "17.0.2",
     "babel-preset-latest": "6.16.0",
     "babel-preset-stage-0": "6.16.0",
+    "camelcase-keys": "4.0.0",
     "cross-env": "3.1.3",
     "font-color-contrast": "1.0.3",
     "is-object": "1.0.1",
-    "jest": "16.0.2",
-    "js-yaml": "3.6.1",
-    "lodash.camelcase": "4.3.0",
+    "jest": "17.0.3",
+    "js-yaml": "3.7.0",
     "map-obj": "2.0.0",
     "npm-run-all": "3.1.1",
     "rimraf": "2.5.4"
