--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
     "compilerOptions": {
+        "experimentalDecorators": true,
         "moduleResolution": "node",
         "inlineSourceMap": true,
         "declaration": true,
         "module": "commonjs",
         "baseUrl": "src",
-        "target": "ES5",
+        "target": "ES2015",
         "rootDir": "src",
         "outDir": "dist",
         "lib": [
