add HTML render of colors
- add HTML render of colors sincce SVG render breaks across devices
  [scripts/build.html, colors.html]
- removed unnecessary import [scripts/build-svg.js]
- modified README.md to include link to HTML render
- added HTML render to npm scripts [package.json]

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "run-s clear-build compile",
     "compile": "tsc --pretty",
     "svg": "node scripts/build-svg.js",
-    "prepublish": "run-s build svg",
+    "html": "node scripts/build-html.js",
+    "prepublish": "run-s build svg html",
     "clear-build": "rimraf dist",
     "start": "run-s build svg test",
     "test": "node dist/__test__"
