--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,15 @@
 {
-    "compilerOptions": {
-        "experimentalDecorators": true,
-        "moduleResolution": "node",
-        "inlineSourceMap": true,
-        "declaration": true,
-        "module": "commonjs",
-        "baseUrl": "src",
-        "target": "ES2015",
-        "rootDir": "src",
-        "outDir": "dist",
-        "lib": [
-            "es2016"
-        ]
-    },
-    "exclude": [
-        "node_modules",
-        "dist"
-    ]
+  "compilerOptions": {
+    "target": "ESNext",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "declaration": true,
+    "outDir": "dist",
+    "rootDir": "src",
+    "lib": ["ESNext"]
+  },
+  "include": ["src/**/*"]
 }
